--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,18 @@
 	    <li><a href="aboutme.html"> About Me </a></li>
 	    <li><a href="html.html"> HTML </a></li>
 	    <li><a href="hardware.html"> Hardware </a></li>
+	    <li><a href="calc.html"> Calculator </a></li>
+	    <li><a href="vindinium.html"> Vindinium </a></li>
+	    <li><a href="todolist.html"> To Do List </a></li>
+	    <li><a href="crossword.html"> Crossword </a></li>
+	    <li><a href="info.html"> Info </a></li>
+
 	</ul>
 	<ul id="navbar">
-	    <h2>  </h2>
-	        <p></p>
+		<img src="http://cdn.xl.thumbs.canstockphoto.com/canstock24153335.jpg">
+	    <h2>Hi, my name is Ana and this is my website!</h2>
+	        <p>I am a Sophomore at Everest Public Highschool. 2 of my favorite books are the Maze<br> Runner and also Night, which is a book I read for my english class.</p>
+	        <p>Some of my hobbies are taking care of my little sister, watching movies<br> and spending time with my family. I really like to spend time with my family because<br> I have so much fun with them and I enjoy their presence at all times.</p>
           
        </body>
 </html> 
