--- a/crossword.html
+++ b/crossword.html
@@ -4,6 +4,20 @@
               <link rel="stylesheet" type="text/css" href="crossword.css">
            <title>The Word Search</title>
 
+   	<!-- Put Main Body in this DIV -->
+     <ul id="navbar">
+	    <li><a href="index.html"> Welcome! </a></li>
+	    <li><a href="aboutme.html"> About Me </a></li>
+	    <li><a href="html.html"> HTML </a></li>
+	    <li><a href="hardware.html"> Hardware </a></li>
+	    <li><a href="calc.html"> Calculator </a></li>
+	    <li><a href="vindinium.html"> Vindinium </a></li>
+	    <li><a href="todolist.html"> To Do List </a></li>
+	    <li><a href="crossword.html"> Crossword </a></li>
+	    <li><a href="info.html"> Info </a></li>
+	</ul>
+	<ul id="navbar">
+
        </head>
        <body>
            <h1 id="the-wordsearch"> The Word Search</h1>
