--- a/todolist.html
+++ b/todolist.html
@@ -6,6 +6,26 @@
 </head>
 <body>
   <header><h1>To Do List</h1></header>
+          <title>My Web Page!!</title>
+           <link rel="stylesheet" type="text/css" href="indexstyle.css">
+ 
+       </head>
+       <body>
+           <h1 id="my-website"> My Website</h1>
+
+	<!-- Put Main Body in this DIV -->
+     <ul id="navbar">
+	    <li><a href="index.html"> Welcome! </a></li>
+	    <li><a href="aboutme.html"> About Me </a></li>
+	    <li><a href="html.html"> HTML </a></li>
+	    <li><a href="hardware.html"> Hardware </a></li>
+	    <li><a href="calc.html"> Calculator </a></li>
+	    <li><a href="vindinium.html"> Vindinium </a></li>
+	    <li><a href="todolist.html"> To Do List </a></li>
+	    <li><a href="crossword.html"> Crossword </a></li>
+	    <li><a href="info.html"> Info </a></li>
+	</ul>
+	<ul id="navbar">
   <section>
     <div id="todolist"></div>
     <form id="myform">
