--- a/calc.html
+++ b/calc.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="calc.css">
 	<title>Calculator</title>
 </head>
 <body>
+
+	<!-- Put Main Body in this DIV -->
+     <ul id="navbar">
+	    <li><a href="index.html"> Welcome! </a></li>
+	    <li><a href="aboutme.html"> About Me </a></li>
+	    <li><a href="html.html"> HTML </a></li>
+	    <li><a href="hardware.html"> Hardware </a></li>
+	    <li><a href="calc.html"> Calculator </a></li>
+	    <li><a href="vindinium.html"> Vindinium </a></li>
+	    <li><a href="todolist.html"> To Do List </a></li>
+	    <li><a href="crossword.html"> Crossword </a></li>
+	    <li><a href="info.html"> Info </a></li>
+
+	</ul>
+	<ul id="navbar">
     
 <input type ="text" name="input1" style="width:50px;" id="input1">
     <select id="dropdown">
